# tfg-jlopez

./: README.md  ejemplo_inicial.py
code/: calibration.py  index.html  process.py  testing_motors.py  testing_motors2.py
code/camera/: camera.py  ejemplo.py  graphenv.py  pinhole.py  pinhole2.py  pinholev3.py  projGeom.py  shoelaceex.py
code/control/: index.html  procesa.php
code/gps/: generator.py  generatorv2.py  getgraph.py  gps_generator_gga.py  gps_send.py
code/ros2/src/pibotj_pothole/: CMakeLists.txt  package.xml
code/ros2/src/pibotj_pothole/config/: joints.yaml
code/ros2/src/pibotj_pothole/launch/: rviz.launch
code/ros2/src/pibotj_pothole/urdf/: robot.xacro
design/: base-ruedas-pieza.stl  base-ruedas.20240701-192842.FCBak  base-ruedas.20240702-013144.FCBak  base-ruedas.20240702-125158.FCBak  base-ruedas.FCStd  base.20240701-172816.FCBak  base.FCStd  base2.20240701-174405.FCBak  base2.FCStd  carroceria-completa-final-v2.stl  ejemplo.stl  ejemplo2.stl  ejemplo3.stl  parte-superior.FCStd  pieza-completa-final.stl  pieza-completa-v2.FCStd  pieza-completa-v3.FCStd  pieza-completa-v5.20240707-191702.FCBak  pieza-completa-v5.FCStd  pieza-completa-v7.FCStd  pieza-completa-v8.FCStd  pieza-completa.20240707-010010.FCBak  sujeccion-trasera.FCStd
docs/: Plantilla IEEE Word.docx
memoria/: bibliografia.bib  estilo.tex  memoria.aux  memoria.bbl  memoria.blg  memoria.locode  memoria.lof  memoria.lomyequation  memoria.lot  memoria.out  memoria.tex  memoria.toc
presentacion/: licencia.tex  slides.aux  slides.nav  slides.out  slides.tex  slides.toc
(+2508 files in other folders)
